fix: collapse animation shaked in pane-group component

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -77,10 +77,19 @@
 }
 
 .collapsing {
+  display: block;
   position: relative;
   height: 0;
   overflow: hidden;
   transition-property: height, visibility;
   transition-duration: .35s;
   transition-timing-function: ease;
+
+  tr& {
+    display: table-row;
+  }
+
+  tbody& {
+    display: table-row-group;
+  }
 }
